[package]
name = "renderahrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", default-features = false, features = [ "render", "animation", "bevy_asset", "bevy_scene", "bevy_winit"]}

serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
image = "*"
serialport = "*"
ahrs = { git = "https://github.com/copterust/ahrs" }
